Update CSS and Liquid in simple text and image so that it orders on mobile correctly

--- a/assets/app.css
+++ b/assets/app.css
@@ -870,6 +870,14 @@ ul, ol{
 /* end @layer base */
 
 @media (min-width: 750px) {
+  .md\:tw-w-1\/4 {
+    width: 25%;
+  }
+
+  .md\:tw-w-3\/4 {
+    width: 75%;
+  }
+
   .md\:tw-gap-x-10 {
     -moz-column-gap: 2.5rem;
          column-gap: 2.5rem;
